BTL/asm1/assignment1/src/main/d96/parser/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Class'", "'Val'", "'Var'", "'If'", "'Else'", 
                     "'Elseif'", "'Foreach'", "'In'", "'By'", "'..'", "'Self'", 
                     "'New'", "'Break'", "'Continue'", "'Return'", "'Constructor'", 
                     "'Destructor'", "'String'", "'Boolean'", "'Int'", "'Float'", 
                     "'Array'", "'Null'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'+.'", "'==.'", "'&&'", "'||'", "'!'", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'.'", "'::'", "'='", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "':'", 
                     "';'" ]

    symbolicNames = [ "<INVALID>", "CLASS", "VAL", "VAR", "IF", "ELSE", 
                      "ELSEIF", "FOREACH", "IN", "BY", "DOTDOT", "SELF", 
                      "NEW", "BREAK", "CONTINUE", "RETURN", "CONSTRUCTOR", 
                      "DESTRUCTOR", "STRINGTYPE", "BOOLTYPE", "INTTYPE", 
                      "FLOATTYPE", "ARRAY", "NULL", "ADDOP", "SUBOP", "MULOP", 
                      "DIVOP", "MODOP", "CONCAT", "STRCOMP", "AND", "OR", 
                      "NOT", "EQ", "NE", "LT", "LTE", "GT", "GTE", "DOT", 
                      "DBCOLON", "ASSIGNOP", "LP", "RP", "LCB", "RCB", "LSB", 
                      "RSB", "COMMA", "COLON", "SEMI", "ID", "STATIC_ID", 
                      "INTLIT", "FLOATLIT", "BOOLLIT", "STRINGLIT", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING", "COMMENT", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_classDecls = 1
    RULE_classDecl = 2
    RULE_memDeclList = 3
    RULE_memDecl = 4
    RULE_attrDecl = 5
    RULE_attrs = 6
    RULE_memIds = 7
    RULE_attrsInit = 8
    RULE_methodDecl = 9
    RULE_paramList = 10
    RULE_params = 11
    RULE_param = 12
    RULE_blockStat = 13
    RULE_statList = 14
    RULE_expr = 15
    RULE_expr1 = 16
    RULE_expr2 = 17
    RULE_expr3 = 18
    RULE_expr4 = 19
    RULE_expr5 = 20
    RULE_expr6 = 21
    RULE_expr7 = 22
    RULE_expr8 = 23
    RULE_expr9 = 24
    RULE_expr10 = 25
    RULE_operand = 26
    RULE_stat = 27
    RULE_declStat = 28
    RULE_varDecl = 29
    RULE_variables = 30
    RULE_ids = 31
    RULE_varsInit = 32
    RULE_assignStat = 33
    RULE_ifStat = 34
    RULE_elseifList = 35
    RULE_forStat = 36
    RULE_methodCall = 37
    RULE_scalarVar = 38
    RULE_indexExpr = 39
    RULE_typeDecl = 40
    RULE_arrayType = 41
    RULE_primitiveType = 42
    RULE_arrayLit = 43
    RULE_exprList = 44
    RULE_exprs = 45
    RULE_argList = 46
    RULE_memId = 47

    ruleNames =  [ "program", "classDecls", "classDecl", "memDeclList", 
                   "memDecl", "attrDecl", "attrs", "memIds", "attrsInit", 
                   "methodDecl", "paramList", "params", "param", "blockStat", 
                   "statList", "expr", "expr1", "expr2", "expr3", "expr4", 
                   "expr5", "expr6", "expr7", "expr8", "expr9", "expr10", 
                   "operand", "stat", "declStat", "varDecl", "variables", 
                   "ids", "varsInit", "assignStat", "ifStat", "elseifList", 
                   "forStat", "methodCall", "scalarVar", "indexExpr", "typeDecl", 
                   "arrayType", "primitiveType", "arrayLit", "exprList", 
                   "exprs", "argList", "memId" ]

    EOF = Token.EOF
    CLASS=1
    VAL=2
    VAR=3
    IF=4
    ELSE=5
    ELSEIF=6
    FOREACH=7
    IN=8
    BY=9
    DOTDOT=10
    SELF=11
    NEW=12
    BREAK=13
    CONTINUE=14
    RETURN=15
    CONSTRUCTOR=16
    DESTRUCTOR=17
    STRINGTYPE=18
    BOOLTYPE=19
    INTTYPE=20
    FLOATTYPE=21
    ARRAY=22
    NULL=23
    ADDOP=24
    SUBOP=25
    MULOP=26
    DIVOP=27
    MODOP=28
    CONCAT=29
    STRCOMP=30
    AND=31
    OR=32
    NOT=33
    EQ=34
    NE=35
    LT=36
    LTE=37
    GT=38
    GTE=39
    DOT=40
    DBCOLON=41
    ASSIGNOP=42
    LP=43
    RP=44
    LCB=45
    RCB=46
    LSB=47
    RSB=48
    COMMA=49
    COLON=50
    SEMI=51
    ID=52
    STATIC_ID=53
    INTLIT=54
    FLOATLIT=55
    BOOLLIT=56
    STRINGLIT=57
    ILLEGAL_ESCAPE=58
    UNCLOSE_STRING=59
    COMMENT=60
    WS=61
    ERROR_CHAR=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    ZEROLIT_ARR = ['0', '00', '0b0', '0B0', '0x0', '0X0']



    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDecls(self):
            return self.getTypedRuleContext(D96Parser.ClassDeclsContext,0)


        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.classDecls()
            self.state = 97
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDecl(self):
            return self.getTypedRuleContext(D96Parser.ClassDeclContext,0)


        def classDecls(self):
            return self.getTypedRuleContext(D96Parser.ClassDeclsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_classDecls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDecls" ):
                return visitor.visitClassDecls(self)
            else:
                return visitor.visitChildren(self)




    def classDecls(self):

        localctx = D96Parser.ClassDeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDecls)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.classDecl()
                self.state = 100
                self.classDecls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.classDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def LCB(self):
            return self.getToken(D96Parser.LCB, 0)

        def memDeclList(self):
            return self.getTypedRuleContext(D96Parser.MemDeclListContext,0)


        def RCB(self):
            return self.getToken(D96Parser.RCB, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_classDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDecl" ):
                return visitor.visitClassDecl(self)
            else:
                return visitor.visitChildren(self)




    def classDecl(self):

        localctx = D96Parser.ClassDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDecl)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(D96Parser.CLASS)
                self.state = 106
                self.match(D96Parser.ID)
                self.state = 107
                self.match(D96Parser.LCB)
                self.state = 108
                self.memDeclList()
                self.state = 109
                self.match(D96Parser.RCB)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.match(D96Parser.CLASS)
                self.state = 112
                self.match(D96Parser.ID)
                self.state = 113
                self.match(D96Parser.COLON)
                self.state = 114
                self.match(D96Parser.ID)
                self.state = 115
                self.match(D96Parser.LCB)
                self.state = 116
                self.memDeclList()
                self.state = 117
                self.match(D96Parser.RCB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemDeclListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def memDecl(self):
            return self.getTypedRuleContext(D96Parser.MemDeclContext,0)


        def memDeclList(self):
            return self.getTypedRuleContext(D96Parser.MemDeclListContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_memDeclList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemDeclList" ):
                return visitor.visitMemDeclList(self)
            else:
                return visitor.visitChildren(self)




    def memDeclList(self):

        localctx = D96Parser.MemDeclListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_memDeclList)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR, D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.STATIC_ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.memDecl()
                self.state = 122
                self.memDeclList()
                pass
            elif token in [D96Parser.RCB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attrDecl(self):
            return self.getTypedRuleContext(D96Parser.AttrDeclContext,0)


        def methodDecl(self):
            return self.getTypedRuleContext(D96Parser.MethodDeclContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_memDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemDecl" ):
                return visitor.visitMemDecl(self)
            else:
                return visitor.visitChildren(self)




    def memDecl(self):

        localctx = D96Parser.MemDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_memDecl)
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.attrDecl()
                pass
            elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.STATIC_ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.methodDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def attrs(self):
            return self.getTypedRuleContext(D96Parser.AttrsContext,0)


        def attrsInit(self):
            return self.getTypedRuleContext(D96Parser.AttrsInitContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attrDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrDecl" ):
                return visitor.visitAttrDecl(self)
            else:
                return visitor.visitChildren(self)




    def attrDecl(self):

        localctx = D96Parser.AttrDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attrDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 132
                self.attrs()
                pass

            elif la_ == 2:
                self.state = 133
                self.attrsInit()
                pass


            self.state = 136
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def memIds(self):
            return self.getTypedRuleContext(D96Parser.MemIdsContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typeDecl(self):
            return self.getTypedRuleContext(D96Parser.TypeDeclContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attrs

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrs" ):
                return visitor.visitAttrs(self)
            else:
                return visitor.visitChildren(self)




    def attrs(self):

        localctx = D96Parser.AttrsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attrs)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.memIds()
            self.state = 139
            self.match(D96Parser.COLON)
            self.state = 140
            self.typeDecl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemIdsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def memId(self):
            return self.getTypedRuleContext(D96Parser.MemIdContext,0)


        def COMMA(self):
            return self.getToken(D96Parser.COMMA, 0)

        def memIds(self):
            return self.getTypedRuleContext(D96Parser.MemIdsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_memIds

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemIds" ):
                return visitor.visitMemIds(self)
            else:
                return visitor.visitChildren(self)




    def memIds(self):

        localctx = D96Parser.MemIdsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_memIds)
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.memId()
                self.state = 143
                self.match(D96Parser.COMMA)
                self.state = 144
                self.memIds()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.memId()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrsInitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def memId(self):
            return self.getTypedRuleContext(D96Parser.MemIdContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def attrsInit(self):
            return self.getTypedRuleContext(D96Parser.AttrsInitContext,0)


        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typeDecl(self):
            return self.getTypedRuleContext(D96Parser.TypeDeclContext,0)


        def ASSIGNOP(self):
            return self.getToken(D96Parser.ASSIGNOP, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_attrsInit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrsInit" ):
                return visitor.visitAttrsInit(self)
            else:
                return visitor.visitChildren(self)




    def attrsInit(self):

        localctx = D96Parser.AttrsInitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_attrsInit)
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.memId()
                self.state = 150
                self.match(D96Parser.COMMA)
                self.state = 151
                self.attrsInit()
                self.state = 152
                self.match(D96Parser.COMMA)
                self.state = 153
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.memId()
                self.state = 156
                self.match(D96Parser.COLON)
                self.state = 157
                self.typeDecl()
                self.state = 158
                self.match(D96Parser.ASSIGNOP)
                self.state = 159
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def memId(self):
            return self.getTypedRuleContext(D96Parser.MemIdContext,0)


        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def paramList(self):
            return self.getTypedRuleContext(D96Parser.ParamListContext,0)


        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def blockStat(self):
            return self.getTypedRuleContext(D96Parser.BlockStatContext,0)


        def CONSTRUCTOR(self):
            return self.getToken(D96Parser.CONSTRUCTOR, 0)

        def DESTRUCTOR(self):
            return self.getToken(D96Parser.DESTRUCTOR, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_methodDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDecl" ):
                return visitor.visitMethodDecl(self)
            else:
                return visitor.visitChildren(self)




    def methodDecl(self):

        localctx = D96Parser.MethodDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_methodDecl)
        try:
            self.state = 179
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.ID, D96Parser.STATIC_ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.memId()
                self.state = 164
                self.match(D96Parser.LP)
                self.state = 165
                self.paramList()
                self.state = 166
                self.match(D96Parser.RP)
                self.state = 167
                self.blockStat()
                pass
            elif token in [D96Parser.CONSTRUCTOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 169
                self.match(D96Parser.CONSTRUCTOR)
                self.state = 170
                self.match(D96Parser.LP)
                self.state = 171
                self.paramList()
                self.state = 172
                self.match(D96Parser.RP)
                self.state = 173
                self.blockStat()
                pass
            elif token in [D96Parser.DESTRUCTOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 175
                self.match(D96Parser.DESTRUCTOR)
                self.state = 176
                self.match(D96Parser.LP)
                self.state = 177
                self.match(D96Parser.RP)
                self.state = 178
                self.blockStat()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def params(self):
            return self.getTypedRuleContext(D96Parser.ParamsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_paramList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = D96Parser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramList)
        try:
            self.state = 183
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                self.params()
                pass
            elif token in [D96Parser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(D96Parser.ParamContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)
